# RS-EC

./: CLAUDE.md  Cargo.toml  PORTING.md  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: access.rs  accounts.rs  auth.rs  cart.rs  categories.rs  favorites.rs  mail.rs  main.rs  order.rs  reviews.rs
