[package]
name = "rs-ec"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "EC-CUBEのハイスピードでハイセキュリティで省メモリなRust+RPoem版(v0.1.0時点は商品カタログCRUDの最小実装のみ、決済/カート/注文は未実装)"
repository = "https://github.com/aon-co-jp/RS-EC"

[[bin]]
name = "rs-ec"
path = "src/main.rs"

[dependencies]
poem = "3.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "rustls-tls"] }

[dev-dependencies]
poem = { version = "3.1", features = ["test"] }
